--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ packaging==24.2
 pluggy==1.5.0
 pydantic==2.11.3
 pydantic_core==2.33.1
+PyJWT==2.10.1
 pyotp==2.9.0
 pytest==8.3.5
 requests==2.32.3
